# mastodon-bots

./: .gitignore  README.md
.github/workflows/: terraform.yml
bots/.template/: main.py  pyproject.toml  test_main.py
bots/clickbait_bot/: README.md  main.py  pyproject.toml
bots/gpu_bot/: lambda_function.py  main.py  pyproject.toml  test_main.py
terraform/: README.md  main.tf  variables.tf
terraform/modules/bot_lambda/: main.tf  variables.tf
